@@ -119,12 +119,7 @@ void maildir_purge(const char *,		/* directory */
 	unsigned);				/* time_t to purge */
 
 void maildir_getnew(const char *,		/* maildir */
-	const char *,				/* folder */
-	void (*)(const char *, void *),		/* Callback function for
-						** every moved msg.
-						*/
-	void *arg);				/* Passthrough callback arg */
-
+		    const char *);		/* folder */
 	/* move messages from new to cur */
 
 int maildir_deletefolder(const char *,		/* maildir */
